--- a/public/contact.html
+++ b/public/contact.html
@@ -35,6 +35,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Search</a></li>
+            <li><a href="favorites">Favorites</a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
